stderr
Hiker.java:2: error: ';' expected
import java.collections.List
                            ^
1 error
